# bolsa-familia

./: .editorconfig  .gitignore  devenv.nix  prefect.yaml  pyproject.toml
etl/: dbt_project.yml
etl/models/silver/: bolsa_familia.py
lib/: dataset.py
lib/extractor/: bolsa_familia.py
lib/ingestion/: __init__.py  bolsa_familia.py
src/main/: __init__.py
src/pipelines/: __init__.py
