[project]
name = "bolsa-familia-stats"
version = "0.1.0"
description = ""
authors = [
    {name = "Thiago Henrique",email = "thiagohdeplima@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "duckdb (>=1.5.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
