[project]
name = "bolsa-familia-stats"
version = "0.1.0"
description = ""
authors = [{ name = "Thiago Henrique", email = "thiagohdeplima@gmail.com" }]
requires-python = ">=3.13,<3.15"
dependencies = [
  "pandas (>=3.0.3,<4.0.0)",
  "numpy (>=2.4.4,<3.0.0)",
  "scikit-learn (>=1.8.0,<2.0.0)",
  "duckdb (>=1.5.2,<2.0.0)",
  "jupyterlab (>=4.5.7,<5.0.0)",
  "voila (>=0.5.12,<0.6.0)",
  "pyarrow (>=24.0.0,<25.0.0)",
  "fastparquet (>=2026.3.0,<2027.0.0)",
  "matplotlib (>=3.10.9,<4.0.0)",
  "seaborn (>=0.13.2,<0.14.0)",
  "ipywidgets (>=8.1.8,<9.0.0)",
  "polars (>=1.40.1,<2.0.0)",
  "jupysql (>=0.11.1,<0.12.0)",
  "duckdb-engine (>=0.17.0,<0.18.0)",
  "toml (>=0.10.2,<0.11.0)",
  "prefect (>=3.7.2,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
